<resources>
    <string name="app_name">LabsCM20171</string>

    <!-- Resources for PersonalInfo  -->
    <string name="title_activity_personal_info">Información Personal</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="masculino">Hombre</string>
    <string name="femenino">Mujer</string>
    <string name="sexo">Sexo:</string>
    <string name="datapicker">Cambiar</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>
    <string-array name="gradosEscolaridad">
        <item>Grado de escolaridad</item>
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Universitaria</item>
        <item>Otro</item>
    </string-array>
    <string name="botonSiguiente">Siguiente</string>

    <!-- Resources for contactInfo -->
    <string name="title_activity_contact_info">Información de contacto</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo</string>
    <string name="pais">Pais</string>
    <string-array name="countries_array">
        <item>Argentina</item>
        <item>Bolivia</item>
        <item>Chile</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Ecuador</item>
        <item>El Salvador</item>
        <item>Guatemala</item>
        <item>Haití</item>
        <item>Honduras</item>
        <item>México</item>
        <item>Nicaragua</item>
        <item>Panamá</item>
        <item>Paraguay</item>
        <item>Perú</item>
        <item>República Dominicana</item>
        <item>Uruguay</item>
        <item>Venezuela</item>
    </string-array>
    <string name="city">Ciudad</string>
    <string-array name="cities_array">
        <item>Barranquilla</item>
        <item>Bogota</item>
        <item>Cali</item>
        <item>Cartagena</item>
        <item>Manizales</item>
        <item>Medellin</item>
        <item>Santa Marta</item>
    </string-array>
    <string name="address">Dirección</string>



    <!-- Resources for contactInfo -->
    <string name="title_activity_other_info">Información complementaria</string>
    <string name="pasatiempos">Pasatiempos: </string>
    <string-array name="listaPasatiempos">
        <item>Leer</item>
        <item>Ver TV</item>
        <item>Bailar</item>
        <item>Cantar</item>
        <item>Nadar</item>
    </string-array>
    <string name="mostrar">Mostrar</string>

</resources>
