<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_personal_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr04_20171.lab1.PersonalInfo">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Nombre -->
        <LinearLayout
            android:id="@+id/layoutNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageNombres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/person" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mdNombres"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/EditTextNombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombres"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences|textNoSuggestions" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <!-- Apellido -->
        <LinearLayout
            android:id="@+id/layoutApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageApellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/person_add" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/mdApellidos"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/EditTextApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellidos"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences|textNoSuggestions" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!-- Sexo -->
        <LinearLayout
            android:id="@+id/layoutSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/people" />

            <TextView
                android:id="@+id/TextViewSexo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/sexo" />

            <RadioGroup
                android:id="@+id/RadioGroupOpcSexo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/RadioButtonH"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/masculino"
                    android:layout_weight="1"/>

                <RadioButton
                    android:id="@+id/RadioButtonM"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/femenino"
                    android:layout_weight="1"/>

            </RadioGroup>


        </LinearLayout>

        <!-- Fecha de nacimiento -->
        <LinearLayout
            android:id="@+id/layoutFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/date" />

            <TextView
                android:id="@+id/TextViewFechaNac"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/fechaNacimiento" />

            <Button
                android:id="@+id/ButtonDatePicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/datapicker"/>

        </LinearLayout>

        <!-- Grado de escolaridad -->
        <LinearLayout
            android:id="@+id/layoutGrado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageGrado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/school" />

            <Spinner
                android:id="@+id/SpinnerEscolaridad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/gradosEscolaridad"
                android:prompt="@array/gradosEscolaridad"></Spinner>

        </LinearLayout>
    </LinearLayout>

    <!-- Boton "Siguiente" -->

    <Button
        android:id="@+id/botonSigPerso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonSiguiente"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
