<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.edu.udea.compumovil.gr04_20171.lab1.ContactInfo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imagenTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/phone" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telefono"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress|textNoSuggestions" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imagenCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mail" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress|textNoSuggestions" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imagenPais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/world" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextPais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pais"
                android:inputType="textAutoComplete"
                android:imeOptions="actionNext"
                android:layout_marginTop="18dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imagenCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/city" />

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="textAutoComplete"
                android:imeOptions="actionNext"
                android:layout_marginTop="18dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imagenAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/home" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:imeOptions="actionDone"
                    android:inputType="textPostalAddress|textNoSuggestions" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonSiguiente"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/botonSiguiente"

        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="39dp" />

</RelativeLayout>
